--- a/placesmain.css
+++ b/placesmain.css
@@ -33,7 +33,7 @@ body footer {
 body {
     -webkit-box-shadow: 0px 0px #7BAFD4;
     box-shadow: 0px 0px #7BAFD4;
-	background-image: url("assets/Clouds.jpg");
+	background-image: url("Clouds.jpg");
 }
 
 .content {
